--- a/HTML Simple Test.html
+++ b/HTML Simple Test.html
@@ -15,6 +15,7 @@
     <h6>Header Level : 6 H6 | Um exemplo simples de HTML |</h6>
     <br>
     <h4>Data : 06/02/2020</h4>
+    </body>
 </body>
 
 </html>
